--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
     "fix": "solucion-rapida.bat",
     "diagnose": "diagnostico-webhook.bat"
   },
-  "keywords": ["whatsapp", "webhook", "api", "n8n", "automation"],
+  "keywords": [
+    "whatsapp",
+    "webhook",
+    "api",
+    "n8n",
+    "automation"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "whatsapp-web.js": "^1.23.0",
-    "express": "^4.18.2",
     "axios": "^1.6.2",
-    "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.3.1",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.31.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
